<resources>
    <string name="app_name">Foodypie</string>
    <string name="login_transition">Login transition</string>
    <string name="login_text">Share your food talent here \n Cook, share and collaborate with the foodie community</string>
    <string name="login_text1">A community for real foodies</string>
    <string name="account_transition">Account transition</string>
    <string name="button_transition">Button Transition</string>
    <string name="username">Username</string>
    <string name="required">*Required</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="already_signup">Already have an account? <b>login</b></string>
    <string name="title">Home</string>
    <string name="search_title">Search</string>
    <string name="post_title">Post</string>
    <string name="follow_title">Community</string>
    <string name="profile_title">Me</string>
    <string name="comment">Add a comment...</string>
    <string name="title_activity_master">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="search_hint">Search...</string>
    <string name="my_menu">Menu</string>
    <string name="title_menu">Menu</string>
    <string name="people">People</string>
    <string name="recipes">Recipes</string>
    <string name="videos">Videos</string>
    <string name="my_activity">Activities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_kitchen">My kitchen</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about">About App</string>
    <string name="additional">Additional Info</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
