<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text1"
        android:transitionName="@string/account_transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:text="@string/login_text1"
        android:gravity="center"
        android:textSize="26sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:transitionName="@string/login_transition"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:lottie_autoPlay="false"
        android:src="@drawable/dinner"
        android:layout_marginTop="10dp"
        app:lottie_loop="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        android:padding="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/login_text"
        android:gravity="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/login"
        android:transitionName="@string/button_transition"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:text="Create account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>