<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/login_transition"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="25dp"
        android:layout_height="wrap_content"
        app:helperTextEnabled="true"
        app:helperText="@string/required"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:errorIconTint="?attr/colorError"
        app:boxStrokeErrorColor="?attr/colorError"
        app:endIconDrawable="@drawable/ic_baseline_check_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_height="wrap_content"
        app:helperTextEnabled="true"
        app:helperText="@string/required"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:errorIconTint="?attr/colorError"
        app:boxStrokeErrorColor="?attr/colorError"
        app:endIconDrawable="@drawable/ic_baseline_check_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/already_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/already_signup"
        android:gravity="center"/>

    <Button
        android:id="@+id/login"
        android:transitionName="@string/button_transition"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>