<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Me.ProfileFragment">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/colorAccent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layer"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_bg">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:text="Shivam prajapati"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="_nik"
            android:textSize="16sp"
            android:textColor="#000"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/grid"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Welcome to my world..."
            android:textSize="16sp"
            android:textColor="#000"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toTopOf="@id/grid"
            android:layout_marginHorizontal="20dp"
            android:background="#37000000"/>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="3"
            app:layout_constraintTop_toBottomOf="@id/about_me"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="10 \n Food posts"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_columnWeight="0.3333"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="100 \n Followers"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_columnWeight="0.3333"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:text="10 \n Following"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_columnWeight="0.3333"/>
        </GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/grid"
            android:layout_marginHorizontal="20dp"
            android:background="#37000000"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kitchen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/grid"
            android:layout_marginTop="20dp"
            android:text="@string/my_kitchen"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/kitchen_title"
            android:layout_marginHorizontal="50dp"
            android:background="#37000000"/>

        <GridLayout
            android:id="@+id/grid2"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:layout_columnWeight="0.5"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Created on:"
                android:layout_columnWeight="0.5"
                android:layout_row="1"
                android:layout_column="0"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rasoi"
                android:layout_columnWeight="0.5"
                android:layout_row="0"
                android:layout_column="1"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25-05-2020"
                android:layout_columnWeight="0.5"
                android:layout_row="1"
                android:layout_column="1"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="5dp"/>
        </GridLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/grid2"
            android:layout_marginHorizontal="50dp"
            android:background="#37000000"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="10dp"
            android:id="@+id/additional"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view2"
            android:text="@string/additional"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy_policy"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/additional"
            android:text="@string/privacy_policy"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feedback"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy"
            android:text="@string/feedback"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/invite"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/feedback"
            android:text="@string/invite_friends"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_app"
            android:padding="10dp"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/invite"
            android:text="@string/about"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#fff"
        android:clickable="true"
        android:focusable="true"
        android:elevation="8dp"
        android:src="@color/colorPrimaryDark" />
       </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>